# nexus

./: .cursorignore  .env.example  .gitignore  .nexus-conflict-rules.yaml  .releaserc.json  .windsurfrules  MARKDOWN_SYSTEM_DEMO.md  Makefile  READER_OPTIMIZATION_SUMMARY.md  README.md  README_zh-CN.md  _typos.toml  copier.yml  deployment.md  deployment_zh-CN.md  development.md  development_zh-CN.md  docker-compose.docs.yml  docker-compose.override.yml  docker-compose.traefik.yml  docker-compose.yml  docker-compose.yml.backup  extension_debug.html  openapi.json.bak  package-lock.json  package.json  pnpm-lock.yaml  requirements.txt  test_markdown_system.py  test_timezone_integration.py
backend/: .coveragerc  .env.example  .gitignore  CHINESE_ENCODING_COMPLETE_FIX.md  README.md  debug_r2.py  fly.toml  package.json  pnpm-lock.yaml  pyproject.toml  pytest.ini  requirements.txt  start_backend.sh  test_api_encoding.py  test_chinese_encoding.py  test_chinese_website_parsing.py  test_chunker.py  test_complete_encoding_fix.py  test_db.py  test_encoding_fix.py  test_encoding_logic.py  test_fallback_behavior.py  test_jina_integration.py  test_lite.py  test_litellm_connection.py  test_real_chinese_website.py  test_toggle_api.py  test_url_processing.py
backend/app/: __init__.py  base.py  crud.py  main.py  models.py  tests_pre_start.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 097e0e7430a6_add_token_blacklist_table.py  1bd1ca860f4b_fix_relationship_definitions_with_.py  364fe2ea66d8_update_relationship_definitions_without_.py  3d595f99f9dc_add_content_tables.py  568a9c9e88d4_add_is_setup_complete_to_user.py  5ee6589f44e3_merge_prompt_tables_with_main.py  647814e097c3_remove_foreign_key_constraints.py  9a6058d599a7_merge_migrations.py  (+10 more)
backend/app/api/: deps.py  main.py
backend/app/core/: config.py  db.py  db_factory.py  security.py  storage.py  supabase_service.py
backend/app/crud/: __init__.py  crud_content.py  crud_image.py
backend/app/models/: __init__.py  content.py  image.py  project.py  prompt.py
backend/app/prompt_templates/: explanation.j2   key_points.j2   labels.j2  summary.j2
backend/app/schemas/: __init__.py  common.py  content.py  dashboard.py  image.py  llm.py  llm_service.py  projects.py
backend/app/services/: smart_routing.py
backend/app/tests/: README.md  conftest.py  test_content_processors.py  test_initial_data.py
backend/app/utils/: __init__.py  background_tasks.py  content_chunker.py  content_processors.py  error.py  events.py  image_processor.py  image_utils.py  llm.py  response.py  timezone.py
backend/scripts/: README.md  add_test_content.py  backup-and-reinit-data.py  create-test-content.py  get-admin-jwt.py  init-default-data.py  migrate_dashboard_refactor.py  migrate_storage.py  prestart.sh  test-custom-user-id.py  test-debug.py  test-init-data.py  test.sh  tests-start.sh  verify-test-config.py
(+827 files in other folders)
